feature(jni,plugin): finish